--- a/public/menu.html
+++ b/public/menu.html
@@ -45,7 +45,7 @@
   <header>
     <div class="logo">
      <img src="http://placekitten.com/50/50">
-     COOL LOGO
+     BELA LUGOSI'S FED
     </div>
 
     <ul>
