working on creating ejs partials

--- a/public/menu.html
+++ b/public/menu.html
@@ -14,6 +14,20 @@
     padding: 5rem;
   }
 
+/*  .logo {
+    display: inline-block;
+  }
+  header {
+    margin-bottom: 90px;
+  }
+  li {
+    list-style:none;
+    display: inline-block;
+    }
+  ul {
+    float: right;
+  }*/
+
   footer {
     padding-top: 20px;
     float: right;
@@ -27,6 +41,19 @@
 </head>
 
 <body>
+
+<!--   <header>
+    <div class="logo">
+     <img src="http://placekitten.com/50/50">
+     BELA LUGOSI'S FED
+    </div>
+
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/menu">Menu</a></li>
+      <li><a href="/order">Order</a></li>
+    </ul>
+  </header> -->
 
   <main class="container">
 
